--- a/sys/add-user.html
+++ b/sys/add-user.html
@@ -131,6 +131,7 @@
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 							   aria-expanded="false"><span class="ti-pencil-alt"></span> 订单管理</a>
 							<div class="dropdown-menu">
+								<a class="dropdown-item" href="#" onclick="exportTemplate(4)">导出订单模板</a>
 								<a class="dropdown-item" href="add-order.html">添加采购订单</a>
 								<a class="dropdown-item" href="orders.html">订单列表</a>
 								<a class="dropdown-item" href="his-orders.html">已完成订单信息</a>
@@ -156,6 +157,27 @@
 								<a class="dropdown-item" href="record_fin.html">手动录入</a>
 							</div>
 						</li>
+
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+							   aria-expanded="false"><span class="ti-key"></span> 仓库数据导入导出</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="#" onclick="exportTemplate(2)">导出仓库模板</a>
+								<a class="dropdown-item" href="depository.html">导入仓库数据</a>
+								<a class="dropdown-item" href="depository_fin.html">手动录入仓库信息</a>
+							</div>
+						</li>
+
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+							   aria-expanded="false"><span class="ti-key"></span> 客户数据导入导出</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="#" onclick="exportTemplate(3)">导出客户模板</a>
+								<a class="dropdown-item" href="cus.html">导入客户数据</a>
+								<a class="dropdown-item" href="cus_fin.html">手动录入客户信息</a>
+							</div>
+						</li>
+
 					</ul>
 				</div>
 			</nav>
@@ -218,7 +240,6 @@
 									<div class="form-group col-md-6">
 										<label for="role">角色</label>
 										<select class="form-control" id="role">
-											<option value="">请选择角色<option>
 											<option value="0">普通员工</option>
 											<option value="1">管理员</option>
 										</select>
