--- a/sys/orders.html
+++ b/sys/orders.html
@@ -1,6 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
-
+﻿<html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -129,6 +127,7 @@
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 							   aria-expanded="false"><span class="ti-pencil-alt"></span> 订单管理</a>
 							<div class="dropdown-menu">
+								<a class="dropdown-item" href="#" onclick="exportTemplate(4)">导出订单模板</a>
 								<a class="dropdown-item" href="add-order.html">添加采购订单</a>
 								<a class="dropdown-item" href="orders.html">订单列表</a>
 								<a class="dropdown-item" href="his-orders.html">已完成订单信息</a>
@@ -154,199 +153,344 @@
 								<a class="dropdown-item" href="record_fin.html">手动录入</a>
 							</div>
 						</li>
+
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+							   aria-expanded="false"><span class="ti-key"></span> 仓库数据导入导出</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="#" onclick="exportTemplate(2)">导出仓库模板</a>
+								<a class="dropdown-item" href="depository.html">导入仓库数据</a>
+								<a class="dropdown-item" href="depository_fin.html">手动录入仓库信息</a>
+							</div>
+						</li>
+
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+							   aria-expanded="false"><span class="ti-key"></span> 客户数据导入导出</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="#" onclick="exportTemplate(3)">导出客户模板</a>
+								<a class="dropdown-item" href="cus.html">导入客户数据</a>
+								<a class="dropdown-item" href="cus_fin.html">手动录入客户信息</a>
+							</div>
+						</li>
+
 					</ul>
 				</div>
 			</nav>
 		</div>
-				<!-- /Menu -->
-				<!-- Breadcrumb -->
-				<!-- Page Title -->
-				<div class="container mt-0">
-					<div class="row breadcrumb-bar">
-						<div class="col-md-6">
-							<h3 class="block-title">订单列表</h3>
-						</div>
-						<div class="col-md-6">
-							<ol class="breadcrumb">
-								<li class="breadcrumb-item">
-									<a href="index.html">
-										<span class="ti-home"></span>
-									</a>
-								</li>
-								<li class="breadcrumb-item">订单管理</li>
-								<li class="breadcrumb-item active">订单列表信息</li>
-							</ol>
-						</div>
-					</div>
+		<!-- /Menu -->
+		<!-- Breadcrumb -->
+		<!-- Page Title -->
+		<div class="container mt-0">
+			<div class="row breadcrumb-bar">
+				<div class="col-md-6">
+					<h3 class="block-title">订单列表</h3>
 				</div>
-			<!-- /Page Title -->
-
-			<!-- /Breadcrumb -->
-			<!-- Main Content -->
-			<div class="container">
-
-				<div class="row">
-					<!-- Widget Item -->
-					<div class="col-md-12">
-						<div class="widget-area-2 lochana-box-shadow">
-							<h3 class="widget-title">订单列表</h3>
-							<div class="table-responsive mb-3">
-								<table id="tableId" class="table table-bordered table-striped">
-									<thead>
-										<tr>
-											<th class="no-sort">
-												<div class="custom-control custom-checkbox">
-													<input class="custom-control-input" type="checkbox" id="select-all">
-													<label class="custom-control-label" for="select-all"></label>
-												</div>
-											</th>
-											<th>药品名称</th>
-											<th>客户名称</th>
-											<th>配送数量</th>
-											<th>配送状态</th>
-											<th>配送电话</th>
-											<th>配送地址</th>
-											<th>备注</th>
-											<th>操作</th>
-										</tr>
-									</thead>
-									<tbody id="tb">
-									<tr>
-									</tr>
-
-									</tbody>
-                                </table>
-
-
-							</div>
-						</div>
-					</div>
-					<!-- /Widget Item -->
+				<div class="col-md-6">
+					<ol class="breadcrumb">
+						<li class="breadcrumb-item">
+							<a href="index.html">
+								<span class="ti-home"></span>
+							</a>
+						</li>
+						<li class="breadcrumb-item">订单管理</li>
+						<li class="breadcrumb-item active">订单列表</li>
+					</ol>
 				</div>
 			</div>
-			<!-- /Main Content -->
-			<!--Copy Rights-->
-
-			<!-- /Copy Rights-->
 		</div>
-		<!-- /Page Content -->
+		<!-- /Page Title -->
+
+		<!-- /Breadcrumb -->
+		<!-- Main Content -->
+		<div class="container">
+			<div class="row">
+				<!-- Widget Item -->
+				<div class="col-md-12">
+					<div class="widget-area-2 lochana-box-shadow">
+						<h3 class="widget-title">订单列表</h3>
+						<form  method="post" enctype="multipart/form-data">
+							<input type="file" id="upfile" name="upfile">
+							<input type="button" value = "上传文件" onclick="subFile()">
+						</form>
+						<div class="table-responsive mb-3">
+							<table id="tableId" class="table table-bordered table-striped">
+								<!--                                    <tbody id="tb">-->
+
+								<!--                                    </tbody>-->
+							</table>
+
+						</div>
+					</div>
+				</div>
+				<!-- /Widget Item -->
+			</div>
+		</div>
+		<!-- /Main Content -->
+		<!--Copy Rights-->
+
+		<!-- /Copy Rights-->
 	</div>
-	<!-- Back to Top -->
+	<!-- /Page Content -->
+</div>
+<!-- Back to Top -->
+<a id="back-to-top" href="#" class="back-to-top">
+	<span class="ti-angle-up"></span>
+</a>
+<!-- /Back to Top -->
+<!-- Jquery Library-->
+<script src="js/jquery-3.2.1.min.js"></script>
+<!-- Popper Library-->
+<script src="js/popper.min.js"></script>
+<!-- Bootstrap Library-->
+<script src="js/bootstrap.min.js"></script>
 
-	<!-- /Back to Top -->
-	<!-- Jquery Library-->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<!-- Popper Library-->
-	<script src="js/popper.min.js"></script>
-	<!-- Bootstrap Library-->
-    <script src="js/bootstrap.min.js"></script>
-    
-    <!-- Datatable  -->
-	<script src="datatable/jquery.dataTables.min.js"></script>
-	<script src="datatable/dataTables.bootstrap4.min.js"></script>
-    
-	<!-- Custom Script-->
-	<script src="js/custom.js"></script>
-	<script src="js/common.js"></script>
-
-	<script src="js/custom-datatables.js"></script>
+<!-- Datatable  -->
+<script src="datatable/jquery.dataTables.min.js"></script>
+<script src="datatable/dataTables.bootstrap4.min.js"></script>
+<!-- Custom Script-->
+<script src="js/custom.js"></script>
+<script src="js/common.js"></script>
 </body>
 <script>
-	window.onload = initData;
+
+	window.onload=initData;
 	function initData(){
+		$('#tableId').DataTable({
+			// "destroy":true,
+			"processing": true,
+			"searching": true,
+			// "serverSide": true,
+			"bPaginate":true,
+			"bLengthChange":true,
+			"edit":true,
+			"bFilter":true,
+			"bSort":true,
+			"bAutoWidth": true,
+			language: {
+				"sProcessing": "处理中...",
+				"sLengthMenu": "显示 _MENU_ 项结果",
+				"sZeroRecords": "没有匹配结果",
+				"sInfo": "显示第 _START_ 至 _END_ 项结果，共 _TOTAL_ 项",
+				"sInfoEmpty": "显示第 0 至 0 项结果，共 0 项",
+				"sInfoFiltered": "(由 _MAX_ 项结果过滤)",
+				"sInfoPostFix": "",
+				"sSearch": "搜索:",
+				"sUrl": "",
+				"sEmptyTable": "表中数据为空",
+				"sLoadingRecords": "载入中...",
+				"oPaginate": {
+					"sFirst": "首页",
+					"sPrevious": "上页",
+					"sNext": "下页",
+					"sLast": "末页"
+				}},
+			"ajax": {//ajax请求数据源
+				"url": baseUrl+"/order/list",
+				data:{
+					userId:userId
+				},
+				"type": "get",
+			},
+			"order": [],
+			"columns": [
+				{"sTitle":"订单编号", "mDataProp": "id","sClass": "center", "bSortable": false, "sWidth": "20",editable:true},
+				{"sTitle":"客户", "mDataProp": "cusName","sClass": "center", "bSortable": false, "sWidth": "200",editable:true},
+				{"sTitle":"电话", "mDataProp": "phone","sClass": "center", "bSortable": false, "sWidth": "100",editable:true},
+				{"sTitle":"地址", "mDataProp": "address","sClass": "center", "bSortable": false, "sWidth": "200",editable:true},
+				{"sTitle":"状态", "mDataProp": "state","sClass": "center", "bSortable": false, "sWidth": "100",editable:true,mRender:function (data){
+						if(data=="0"){
+							return "已创建未发货";
+						}
+						if(data=="1"){
+							return "已发货未开票";
+						}
+						if(data=="2"){
+							return "开全票";
+						}
+						if(data=="3"){
+							return "部分开票";
+						}
+						if(data=="4"){
+							return "回全款";
+						}
+						if(data=="5"){
+							return "部分回款";
+						}
+					}},
+				{"sTitle":"总额", "mDataProp": "amount","sClass": "center", "bSortable": false, "sWidth": "100",editable:true},
+				{"sTitle":"创建人", "mDataProp": "userName","sClass": "center", "bSortable": false, "sWidth": "250"},
+				{"sTitle":"创建时间", "mDataProp": "createTime","sClass": "center", "bSortable": false, "sWidth": "200"},
+				{"sTitle":"操作", "mDataProp": "id","sClass": "center", "bSortable": false, "sWidth": "50",mRender:function (data,cell){
+						var html ="";
+						// html+="<input type='button' onclick='editOne("+data+")' value='修改'></input>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;";
+						html+="<input type='button' onclick='deleteInfo(\""+data+"\")' value='删除订单' /></br>";
+						html+="<input type='button' onclick='pubInfo(\""+data+"\")' value='订单发货' /></br>";
+						html+="<input type='button' onclick='allPay(\""+data+"\")' value='开全款票据' /></br>";
+						html+="<input type='button' onclick='unPay(\""+data+"\")' value='开非全款票据' /></br>";
+						html+="<input type='button' onclick='payment(\""+data+"\")' value='已收全款' /></br>";
+						html+="<input type='button' onclick='unpayment(\""+data+"\")' value='部分收项' />";
+						html+="<input type='button' onclick='showdetail(\""+data+"\")' value='显示订单明细' />";
+						return html;
+					}},
+
+
+				// {"data": ''}
+			]
+		});
+	}
+
+
+	function pubInfo(id){
+		var confirm = window.confirm("是否要发货");
+		var state = "1";
+		if(confirm != true){
+			return ;
+		}
 		$.ajax({
-			url:baseUrl+"order/getOrders",
+			url: baseUrl+"order/updateState",
 			type:"get",
-			data:{},
+			data:{id:id,state:state},
 			success:function (data){
 				if(data.success){
-					var list = data.data;
-					console.info(list);
-					var tbody = $("#tb");
-					var html="";
-					for(var i = 0; i< list.length;i++){
-						var id = list[i].id;
-						var state = list[i].state;
-						html+="<tr>";
-						html+="<td><div className=\"custom-control custom-checkbox\">";
-						html+="<input className=\"custom-control-input\" type=\"checkbox\" id=\"1\">";
-						html+="<label className=\"custom-control-label\" htmlFor=\"1\"></label>";
-						html+="</div>";
-						html+="</td>";
-						html+="<td>"+list[i].merchName+"</td>";
-						html+="<td>"+list[i].cusName+"</td>";
-						html+="<td>"+list[i].count+"</</td>";
-						html+="<td>"+list[i].state.replace("0","订单未配送").replace("1","订单已出库").replace("2","订单已完成")+"</</td>";
-						html+="<td>"+list[i].phone+"</</td>";
-						html+="<td>"+list[i].address+"</</td>";
-						html+="<td>"+list[i].remark+"</</td>";
-						html+="<td>";
-						html+="<button type='button' className='btn btn-danger' id='delbtn' onclick=deleteOrder('"+id+"','"+state+"')><span className='ti-trash'></span> 删除 </button>"
-
-						// html+="<button type='button' className='btn btn-danger' id='editbtn' onclick=editOrder('"+id+"')><span className='ti-trash'></span> 编辑 </button>"
-
-						html+="<button type='button' className='btn btn-danger' id='editbtn' onclick=pubOrder('"+id+"')><span className='ti-trash'></span> 发货 </button>"
-
-						html+="<button type='button' className='btn btn-danger' id='editbtn' onclick=finOrder('"+id+"')><span className='ti-trash'></span> 完成 </button>"
-
-						html+="</td>";
-						html+="</tr>";
-					}
-					tbody.append(html);
-				}else{
-					alert("无订单，请添加");
+					window.location.href="orders.html";
 				}
 			}
 		});
 	}
-	function deleteOrder(id,state){
-		if(state != '0' ){
-			alert("订单已发出，不能删除");
+
+	function allPay(id){
+		var confirm = window.confirm("是否开全票");
+		var state = "2";
+		if(confirm != true){
+			return ;
+		}
+		$.ajax({
+			url: baseUrl+"order/updateState",
+			type:"get",
+			data:{id:id,state:state},
+			success:function (data){
+				if(data.success){
+					window.location.href="orders.html";
+				}
+			}
+		});
+	}
+
+	function unPay(id){
+		var state = "3";
+		$.ajax({
+			url: baseUrl+"order/updateState",
+			type:"get",
+			data:{id:id,state:state},
+			success:function (data){
+				if(data.success){
+					window.location.href="orders.html";
+				}
+			}
+		});
+	}
+
+	function payment(id){
+		var confirm = window.confirm("是否已开全款");
+		var state = "4";
+		if(confirm != true){
+			return ;
+		}
+		$.ajax({
+			url: baseUrl+"order/updateState",
+			type:"get",
+			data:{id:id,state:state},
+			success:function (data){
+				if(data.success){
+					window.location.href="orders.html";
+				}
+			}
+		});
+	}
+
+	function unpayment(id){
+		var state = "5";
+		$.ajax({
+			url: baseUrl+"order/updateState",
+			type:"get",
+			data:{id:id,state:state},
+			success:function (data){
+				if(data.success){
+					window.location.href="orders.html";
+				}
+			}
+		});
+	}
+
+	function showdetail(id){
+		$.ajax({
+			url:baseUrl+"order/getParentId",
+			type:"get",
+			data:{id:id},
+			success:function (data){
+				localStorage.setItem("parentId",data.data);
+				window.location.href="add-order.html";
+			}
+		});
+
+
+	}
+
+
+	function subFile(){
+		var val = $("#upfile").val();
+		if(val==''||val=='undefined'){
+			alert("请先上传文件");
 			return false;
 		}
-		return false;
-		var confirm = window.confirm("确定要删除吗？")
-		if(!confirm){return false;}
+		var formData = new FormData();
+		formData.append("upfile", document.getElementById("upfile").files[0]);
+		formData.append("type","3");
 		$.ajax({
-			url:baseUrl+"order/deleteById",
+			url: baseUrl+"export/exportIntoFile",
+			type: "POST",
+			data: formData,
+			/**
+			 *必须false才会自动加上正确的Content-Type
+			 */
+			contentType: false,
+			/**
+			 * 必须false才会避开jQuery对 formdata 的默认处理
+			 * XMLHttpRequest会对 formdata 进行正确的处理
+			 */
+			processData: false,
+			beforeSend:function (request){
+				request.setRequestHeader("token",userId);
+			},
+			success: function (data) {
+				alert("导入成功！");
+				location.href='cus.html';
+			},
+			error: function () {
+				alert("导入失败！");
+			}
+		});
+	}
+
+	function deleteInfo(id){
+		var confirm = window.confirm("确定要删除吗");
+		if(confirm != true){
+			return ;
+		}
+		$.ajax({
+			url: baseUrl+"order/deleteOrderAll",
 			type:"get",
 			data:{id:id},
 			success:function (data){
 				if(data.success){
-					alert("删除成功！");
 					window.location.href="orders.html";
 				}
 			}
 		});
 	}
-	// function editOrder(id){
-	// 	window.location.href="edit-order.html?id="+id;
-	// }
-	function pubOrder(id){
-		$.ajax({
-			url:baseUrl+"order/updateById",
-			type:"get",
-			data:{id:id,state:"1"},
-			success:function (data){
-				if(data.success){
-					alert("发货成功");
-					window.location.href="orders.html";
-				}
-			}
-		});
-	}
-	function finOrder(id){
-		$.ajax({
-			url:baseUrl+"order/updateById",
-			type:"get",
-			data:{id:id,state:"2"},
-			success:function (data){
-				if(data.success){
-					alert("订单完成");
-					window.location.href="orders.html";
-				}
-			}
-		});
-	}
+
+
 </script>
+
 </html>
